--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -37,6 +37,6 @@
         grid-template-columns: 1fr;
         padding: 0px 0px;
         overflow: hidden;
-        background-color: #ffffff
+        background-color: #f5f5f5
     }
 }
