--- a/src/Pages/Notification/Notification.css
+++ b/src/Pages/Notification/Notification.css
@@ -84,11 +84,14 @@ small{
     .noti-overall{
         padding: 0;
     }
+    .notification-group h1{
+        font-size: 24px;
+    }
     .noti-div{
         background-color: black;
         width: 45px;
         height: 45px;
-        margin: 5px 0px 0px 5px;
+        margin: 5px 0px 0px 10px;
     }
     .notification-section{
         background-color: #ffffff;
@@ -98,8 +101,21 @@ small{
         font-size: 25px;
     }
     .nav-section img{
-        width: 50px;
-        height: 50px;
-        margin: 10px 5px 0px 0px;
+        width: 45px;
+        height: 45px;
+        margin: 10px 10px 0px 0px;
+    }
+    .notification-msg img{
+        width: 40px;
+        height: 40px;
+    }
+    .notification-msg p{
+        font-size: 14px;
+    }
+    .notification-msg span{
+        font-size: 15px;
+    }
+    small{
+
     }
 }
