--- a/src/Components/Navigation/Nav.css
+++ b/src/Components/Navigation/Nav.css
@@ -36,8 +36,11 @@ nav{
 }
 .n-img{
     width: 50px;
+    height: 50px;
     border-radius: 50%;
     cursor: pointer;
+    object-fit: cover;
+    object-position: center;
 }
 .n-form-button{
     width: 50%;
@@ -118,6 +121,7 @@ nav{
     }
     .n-img{
         width: 38px;
+        height: 38px;
         border-radius: 50%;
     }
     #n-search{
@@ -174,6 +178,7 @@ nav{
     }
     .n-img{
         width: 60px;
+        height: 60px;
         border-radius: 50%;
     }
     #n-search{
@@ -241,6 +246,7 @@ nav{
     }
     .n-img{
         width: 40px;
+        height: 40px;
         border-radius: 50%;
         margin-left: 8px;
     }
